Class parsing rewrite, part 1
Many things are broken but it compiles now...